git-svn-id: http://svn.vdombox.ru/flextools/trunk@8059 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Preview/src/net/vdombox/ide/modules/Preview2.mxml
+++ b/IDE/v.02/modules/Preview/src/net/vdombox/ide/modules/Preview2.mxml
@@ -25,16 +25,19 @@
 			override public function tearDown() : void
 			{
 				dispatchEvent( new Event( TEAR_DOWN ) );
+				trace("tearDown");
 			}
 
 			override public function get moduleID() : String
 			{
 				return MODULE_ID;
+				trace("moduleID");
 			}
 
 			override public function get moduleName() : String
 			{
 				return MODULE_NAME;
+				trace("moduleName");
 			}
 
 			override public function get version() : String
@@ -61,11 +64,13 @@
 			{
 				facade = ApplicationFacade.getInstance( MODULE_ID );
 				ApplicationFacade( facade ).startup( this );
+				trace("startup");
 			}
 
 			override public function getToolset() : void
 			{
 				facade.sendNotification( Notifications.CREATE_TOOLSET );
+				trace("getToolset");
 			}
 
 			override public function getSettingsScreen() : void
