--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/GlobalScriptsPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/GlobalScriptsPanel.mxml
@@ -45,7 +45,7 @@
 			
 			protected function panel1_creationCompleteHandler(event:FlexEvent):void
 			{
-				titleDisplay.left = 25;
+				//titleDisplay. = 25;
 			}
 			
 		]]>
