--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
@@ -127,7 +127,7 @@
 			
 			protected function panel1_creationCompleteHandler(event:FlexEvent):void
 			{
-				titleDisplay.left = 25;
+				//titleDisplay.left = 25;
 			}
 			
 		]]>
