--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
@@ -256,7 +256,7 @@
 
 			private function transformMarker_tansformBeginHandler( event : TransformMarkerEvent ) : void
 			{
-				trace ("-- [VdomObjectEditor] transformMarker_tansformBegin");
+				//trace ("-- [VdomObjectEditor] transformMarker_tansformBegin");
 				toolbarPanel.saveProperties();
 			}
 			
