--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/ProjectProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/ProjectProperties.mxml
@@ -4,7 +4,9 @@
 		 horizontalAlign="left" xmlns:customize="net.vdombox.powerpack.customize.*"
 		 verticalScrollPolicy="off" horizontalScrollPolicy="off"
 		 initialize="initializeHandler(event)"
-		 creationComplete="creationCompleteHandler(event)">
+		 creationComplete="creationCompleteHandler(event)"
+		 show="showHandler(event)"
+		 visible="false">
 	
 	<customize:TemplateDefaultLogo id="defaultLogo" />
 	
@@ -241,6 +243,7 @@
 			{
 				if (!project)
 					return;
+				
 				txtName.text = project.name;
 				txtInstallerId.text = project.installerId;
 				txtDesc.text = project.description;
@@ -252,8 +255,6 @@
 				
 				usePictureCheckBox.selected = project.picture ? true : false;
 				onUsePictureSelectionChanged(null);
-				
-				txtName.setFocus();
 			}
 			
 			public function saveSettings () : void
@@ -316,6 +317,22 @@
 				initialGraph = graphsComboBox.selectedItem as GraphCanvas;
 			}
 			
+			protected function showHandler(event:FlexEvent):void
+			{
+				setFocus();
+			}
+			
+			protected function txtName_focusInHandler(event:FocusEvent):void
+			{
+				txtName.setSelection(0, txtName.text.length);
+			}
+			
+			override public function setFocus () : void
+			{
+				txtName.setFocus();
+				txtName.setSelection(0, txtName.text.length);
+			}
+			
 		]]>
 	</mx:Script>
 	
@@ -326,7 +343,7 @@
 				<mx:Label text="{LanguageManager.sentences.template_name}:" />
 			</mx:GridItem>
 			<mx:GridItem width="100%" height="100%">
-				<mx:TextInput width="300" id="txtName" />
+				<mx:TextInput width="300" id="txtName" focusIn="txtName_focusInHandler(event)"/>
 			</mx:GridItem>
 		</mx:GridRow>
 		
