git-svn-id: http://svn.vdombox.ru/flextools/trunk@8084 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ToolbarPanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ToolbarPanel.mxml
@@ -134,10 +134,10 @@
 					dispatchEvent( editorEvent );
 			}
 			
-			public function refresh() : void 
+			public function refresh( renderer : RendererBase ) : void 
 			{
 				//trace ('ToolbarPanel refresh: _currentToolbar = ' + _currentToolbar);
-				if (currentToolbar)
+				if (currentToolbar && renderer.vdomObjectVO.id == _selectedRenderer.vdomObjectVO.id )
 					currentToolbar.refresh(_selectedRenderer);
 			}
 			
