git-svn-id: http://svn.vdombox.ru/flextools/trunk@8085 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/ResourcesArea.mxml
+++ b/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/ResourcesArea.mxml
@@ -110,6 +110,12 @@
 			protected function group1_creationCompleteHandler(event:FlexEvent):void
 			{
 				resourcesList.addEventListener( ResourceVOEvent.PREVIEW_RESOURCE, previewResource, true, 0 ,true );
+				resourcesList.addEventListener(MouseEvent.MOUSE_WHEEL, mouseWheelHandler, true, 0, true );
+			}
+			
+			private function mouseWheelHandler( event : MouseEvent ) : void
+			{
+				event.delta = event.delta > 0 ? 1 : -1;
 			}
 			
 			public function previewResource(event:Event) : void
