git-svn-id: http://svn.vdombox.ru/flextools/trunk@8086 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxAttribute.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxAttribute.mxml
@@ -9,6 +9,7 @@
 			import mx.collections.SortField;
 			
 			import net.vdombox.ide.common.model._vo.ObjectListVO;
+			import net.vdombox.ide.common.view.components.VDOMScroller;
 			import net.vdombox.ide.modules.wysiwyg.events.AttributeEvent;
 			import net.vdombox.ide.modules.wysiwyg.events.MultilineWindowEvent;
 			
