--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/DropDownListSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/DropDownListSkin.mxml
@@ -26,7 +26,7 @@
       @productversion Flex 4
 -->
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" 
-    xmlns:fb="http://ns.adobe.com/flashbuilder/2009" alpha.disabled=".5"> 
+    xmlns:fb="http://ns.adobe.com/flashbuilder/2009" alpha.disabled=".5" xmlns:components="net.vdombox.ide.common.view.components.*"> 
 
     <!-- host component -->
     <fx:Metadata>
@@ -90,7 +90,7 @@
             }
 			
 			protected function scroller_mouseWheelHandler(event:MouseEvent):void
-			{
+			{				
 				event.stopImmediatePropagation();
 			}
 			
@@ -144,7 +144,7 @@
             </s:Rect>
             
             <!--- @private -->
-            <s:Scroller id="scroller" left="0" top="0" right="0" bottom="0" hasFocusableChildren="false" minViewportInset="1"
+            <components:VDOMScroller id="scroller" left="0" top="0" right="0" bottom="0" hasFocusableChildren="false" minViewportInset="1"
 						mouseWheel="scroller_mouseWheelHandler(event)">
                 <!--- @copy spark.components.SkinnableDataContainer#dataGroup-->
                 <s:DataGroup id="dataGroup" itemRenderer="spark.skins.spark.DefaultItemRenderer">
@@ -152,7 +152,7 @@
                         <s:VerticalLayout gap="0" horizontalAlign="contentJustify"/>
                     </s:layout>
                 </s:DataGroup> 
-            </s:Scroller>
+            </components:VDOMScroller>
         </s:Group>
     </s:PopUpAnchor>
     
