git-svn-id: http://svn.vdombox.ru/flextools/trunk@8090 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -56,7 +56,7 @@
 			<menuitem label="Template" id="template">
 				<!--menuitem label="Validate" id="validate"/-->
 				<menuitem label="Properties" id="properties" />
-				<menuitem label="Build installer" id="air_builder" />
+				<menuitem label="Export project build" id="air_builder" />
 			</menuitem>
 
 			<menuitem label="Run" id="run">
