--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/AirBuildProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/AirBuildProperties.mxml
@@ -3,7 +3,7 @@
 	xmlns="net.vdombox.powerpack.dialog.*"
 	xmlns:mx="http://www.adobe.com/2006/mxml"
 	width="500" height="{windowHeight}"
-	title="Build installer"
+	title="Export project build"
 	creationComplete="onShow()"
 	xmlns:controls="net.vdombox.powerpack.lib.extendedapi.controls.*" 
 	xmlns:customize="net.vdombox.powerpack.customize.*"
@@ -305,7 +305,7 @@
 	<mx:VBox verticalGap="10"
 			 paddingLeft="20" paddingRight="20" paddingTop="20" paddingBottom="20">
 		<mx:VBox width="450" horizontalGap="3">
-			<mx:Label text="Build installer" styleName="headerLabel" />
+			<mx:Label text="Export project build" styleName="headerLabel" />
 			<mx:Label text="Build and export VDOM Application Installer" />
 			<mx:HRule width="100%" />
 			<mx:Spacer height="20"/>
