--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ActionElement.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ActionElement.mxml
@@ -16,9 +16,10 @@
 			import net.vdombox.ide.common.model._vo.ClientActionVO;
 			import net.vdombox.ide.common.model._vo.EventParameterVO;
 			import net.vdombox.ide.common.model._vo.EventVO;
-			import net.vdombox.ide.modules.events.events.ElementEvent;
-			import net.vdombox.ide.modules.events.view.skins.EventElementSkin;
 			import net.vdombox.ide.common.view.components.EyeImage;
+			import net.vdombox.ide.modules.events.events.ElementEvent;
+			import net.vdombox.ide.modules.events.view.skins.ActionElementSkin;
+			import net.vdombox.ide.modules.events.view.skins.EventElementSkin;
 			
 			import spark.components.Group;
 			import spark.components.Label;
@@ -36,10 +37,18 @@
 			{
 				super.updateDisplayList( unscaledWidth, unscaledHeight );
 
-				if ( parametersContainer && isNeedUpdateParameters )
+				if ( parametersContainer && isNeedUpdateParameters && data && data.state )
 				{
+					if ( parameters && data.parameters == parameters )
+						return;
+					
+					parameters = data.parameters;
+					
 					isNeedUpdateParameters = false;
 					parametersContainer.removeAllElements();
+					
+					nameGroup.includeInLayout = true;
+					actionRenderer.includeInLayout = true;
 
 					if ( data.parameters.length == 0 )
 						return;
@@ -59,10 +68,13 @@
 						parametersContainer.addElement( parameterRenderer );
 					}
 					
-					if( objectNameGroup )
+					if( nameGroup )
 					{
-						objectNameGroup.visible = data is ClientActionVO;
+						nameGroup.visible = data is ClientActionVO;
 					}
+					
+					if ( skin.currentState == "normal" || skin.currentState == "disabled" )
+						(skin as ActionElementSkin).setLayout(true);
 				}
 			}
 
@@ -90,7 +102,7 @@
 		<s:VerticalLayout gap="1"/>
 	</components:layout>
 
-	<s:Group height="20" width="100%" id="objectNameGroup">
+	<s:Group height="20" width="100%" id="nameGroup" includeInLayout="false">
 
 		<s:Rect bottom="0" left="0" right="0" top="0">
 
@@ -108,8 +120,8 @@
 		<s:Label text="{ data.objectName }" textAlign="center" verticalCenter="0" left="5" right="5" width="100%" maxDisplayedLines="1"/>
 	</s:Group>
 
-	<components:ParameterRenderer icon="@Embed('assets/event.png')" width="100%"
-								  title="{ title }"/>
+	<components:ParameterRenderer id="actionRenderer" icon="@Embed('assets/event.png')" width="100%"
+								  title="{ title }" includeInLayout="false"/>
 
 	<s:VGroup id="parametersContainer"
 			  width="100%"
