--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EventElement.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EventElement.mxml
@@ -13,16 +13,13 @@
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.common.model._vo.EventParameterVO;
+			import net.vdombox.ide.common.view.components.EyeImage;
 			import net.vdombox.ide.modules.events.events.ElementEvent;
 			import net.vdombox.ide.modules.events.view.skins.EventElementSkin;
-			import net.vdombox.ide.common.view.components.EyeImage;
 			
 			import spark.components.Group;
 			import spark.components.Label;
 			import spark.skins.spark.PanelSkin;
-
-			/*[Embed( source="assets/parameter.png" )]
-			private var parameterIcon : Class;*/
 
 			[SkinPart( required="true" )]
 			public var headerGroup : Group;
@@ -34,9 +31,17 @@
 			{
 				super.updateDisplayList( unscaledWidth, unscaledHeight );
 				
-				if ( parametersContainer && isNeedUpdateParameters )
+				if ( parametersContainer && isNeedUpdateParameters && data && data.state )
 				{
+					if ( parameters && data.parameters == parameters )
+						return;
+					
+					parameters = data.parameters;
+					
 					parametersContainer.removeAllElements();
+					
+					nameGroup.includeInLayout = true;
+					eventRenderer.includeInLayout = true;
 				
 					if ( data.parameters.length == 0 )
 						return;
@@ -46,7 +51,7 @@
 					var parameterRendererFactory : ClassFactory = new ClassFactory( ParameterRenderer );
 				
 					parameterRendererFactory.properties = { percentWidth: 100 };
-				
+					
 					for each ( parameter in data.parameters )
 					{
 						parameterRenderer = parameterRendererFactory.newInstance();
@@ -55,6 +60,9 @@
 					
 						parametersContainer.addElement( parameterRenderer );
 					}
+					
+					if ( skin.currentState == "normal" || skin.currentState == "disabled" )
+						(skin as EventElementSkin).setLayout(true);
 				}
 				
 				/*if( objectNameGroup )
@@ -79,7 +87,7 @@
 		<s:VerticalLayout gap="1"/>
 	</components:layout>
 
-	<s:Group height="20" width="100%">
+	<s:Group id="nameGroup" height="20" width="100%" includeInLayout="false">
 		
 		<s:Rect bottom="0" left="0" right="0" top="0">
 			
@@ -97,8 +105,8 @@
 		<s:Label text="{ data.objectName }" textAlign="center" verticalCenter="0" left="5" right="5" width="100%" maxDisplayedLines="1"/>
 	</s:Group>
 
-	<components:ParameterRenderer icon="@Embed('assets/event.png')" width="100%"
-								  title="{ title }"/>
+	<components:ParameterRenderer id="eventRenderer" icon="@Embed('assets/event.png')" width="100%"
+								  title="{ title }" includeInLayout="false"/>
 
 	<s:VGroup id="parametersContainer"
 			  width="100%"
