--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventElementSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventElementSkin.mxml
@@ -40,6 +40,8 @@
 
 			private var isDataChanged : Boolean = false;
 			private var isStateChanged : Boolean = false;
+			
+			private var creationCompleted : Boolean = false;
 
 //			public function get data() : EventVO
 //			{
@@ -58,6 +60,7 @@
 			{
 				BindingUtils.bindProperty( this, "data", hostComponent, "data", true );
 				doubleClickEnabled = true;
+				creationCompleted = true;
 			}
 
 			override protected function commitProperties() : void
@@ -90,6 +93,15 @@
 						hostComponent.data.state = false;
 				}
 			}
+			
+			public function setLayout( flag : Boolean ) : void
+			{
+				if ( bottomGroup.includeInLayout == !flag )
+				{
+					bottomGroup.includeInLayout = flag;
+					arrayImage.includeInLayout = flag;
+				}
+			}
 
 			override protected function stateChanged( oldState : String, newState : String, recursive : Boolean ) : void
 			{
@@ -100,9 +112,21 @@
 				}
 
 				if ( newState == "normal" || newState == "disabled" )
+				{
 					titleLabel.text = headerGroup.toolTip = hostComponent.data.name;
+					
+					if ( creationCompleted)
+						setLayout(true);
+				}
 				else
+				{
 					titleLabel.text = headerGroup.toolTip = hostComponent.data.objectName + ":" + hostComponent.data.name;
+					
+					if ( creationCompleted )
+					{
+						setLayout(false);
+					}
+				}
 			}
 			
 		]]>
@@ -110,12 +134,14 @@
 
 
 	<s:states>
+		
+		<s:State name="normalAndShort" stateGroups="short"/>
+		<s:State name="disabledAndShort" stateGroups="short"/>
 
 		<s:State name="normal" stateGroups="full"/>
 		<s:State name="disabled" stateGroups="full"/>
 
-		<s:State name="normalAndShort" stateGroups="short"/>
-		<s:State name="disabledAndShort" stateGroups="short"/>
+		
 	</s:states>
 
 	<!--Shadow-->
@@ -204,7 +230,7 @@
 					 width="100%"
 					 itemCreationPolicy="immediate" includeIn="full"/>
 
-			<s:Group width="100%" height="16" includeIn="full">
+			<s:Group id="bottomGroup" width="100%" height="16" includeInLayout="false">
 
 				<s:Rect bottom="0" left="0" right="0" top="0">
 					<s:fill>
@@ -222,7 +248,7 @@
 				
 				<s:HGroup width="100%" height="100%" horizontalAlign="center" verticalAlign="middle" >
 					
-					<mx1:Image source="{VDOMImage.ArrClose}" click="hideButton_clickHandler(event)" />
+					<mx1:Image id="arrayImage" source="{VDOMImage.ArrClose}" click="hideButton_clickHandler(event)" includeInLayout="false" />
 					
 				</s:HGroup>
 
