graphs tab navigator
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8097 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/Player.mxml
+++ b/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/player/Player.mxml
@@ -431,7 +431,7 @@
 
 		<mx:Label
 				width="100%"
-				text="{currentTemplate.selectedProject.name}"
+				text="{ContextManager.templates.getItemAt( 0 ).selectedProject.name}"
 				styleName="installerHeaderLabel"/>
 
 		<mx:ViewStack id="vsProcess"
@@ -472,7 +472,7 @@
 
 				<mx:TextArea
 						width="100%" height="150"
-						text="{currentTemplate.selectedProject.description}"
+						text="{ContextManager.templates.getItemAt( 0 ).selectedProject.description}"
 						styleName="infoTextStyle"
 						editable="false" selectable="false" focusEnabled="false"
 
