--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -16,7 +16,7 @@
 		xmlns:containers="net.vdombox.powerpack.lib.extendedapi.containers.*"
 		closing="closingApplicationHandler(event)"
 		styleName="builderWindowStyle" 
-		xmlns:customize1="net.vdombox.powerpack.lib.player.customize.*" xmlns:control="net.vdombox.powerpack.control.*">
+		xmlns:customize1="net.vdombox.powerpack.lib.player.customize.*" xmlns:control="net.vdombox.powerpack.control.*" xmlns:tabnavigator="net.vdombox.powerpack.lib.extendedapi.containers.tabnavigator.*">
 
 	<mx:Style source="assets/style/style.css" />
 	
@@ -1329,7 +1329,7 @@
 
 							<mx:HDividedBox height="100%" width="100%">
 
-								<mx:ViewStack id="viewstack" width="100%" height="100%" borderStyle="solid" />
+								<tabnavigator:ViewNavigator id="viewstack" width="100%" height="100%" borderStyle="solid" />
 
 								<containers:SuperTabNavigator creationPolicy="all" height="100%" dragEnabled="true"
 															  dropEnabled="true" closePolicy="{SuperTab.CLOSE_NEVER}">
